# fhir-fuse

./: .dockerignore  .gitignore  BUILD_NOTES.md  CACHE_ARCHITECTURE.md  CACHING.md  Cargo.toml  DESIGN.md  DOCKER.md  Dockerfile  IMPLEMENTATION.md  MACOS_LIMITATIONS.md  MOUNT_PROPAGATION.md  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TROUBLESHOOTING.md  USAGE.md  access-fuse.sh  cleanup-mount.sh  docker-compose.yaml  docker-run.sh  init-bundle.json  mount.sh  restart.sh  unmount.sh
assets/: README.md  SEARCH_README.md
examples/: test_capability.rs
src/: capability.rs  directory.rs  inode_allocator.rs  main.rs  text_file.rs
src/fhir/: capability.rs  client.rs  mod.rs
src/vfs/: directory.rs  index.rs  mod.rs  operation.rs  resource.rs  search.rs  search_query.rs  text_file.rs
