[package]
name = "fhir-fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = { version = "0.16.0", features = ["libfuse"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
futures = "0.3"
